# deep-diver-following

./: README.md  ReadMe.txt  test_detector.py  test_diver_tracker.py
diver_following_cnn/: CMakeLists.txt  ReadMe.txt  package.xml
diver_following_cnn/launch/: diver_detection_xahid.launch  diver_follow_xahid.launch
diver_following_cnn/scripts/: bboxTracker.py  diverDetector.py  diver_follower.py  follow_go.py
libs/: bboxTracker.py  diverDetector.py  diver_follower.py  trackerPipeline.py  utils.py
model_data/: info.txt
