<?xml version="1.0"?>
<package>
  <name>diver_following_cnn</name>
  <version>0.0.0</version>
  <description>The diver_following_cnn package</description>

  <!-- Last updated: Nov 30, 2018 -->
  <maintainer email="islam034@umn.edu">Jahid</maintainer>
  <license>Interactive Robotics and Vision Lab</license>
  <url type="website">http://irvlab.cs.umn.edu/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export> </export>
</package>
